--- a/TelaTeste.css
+++ b/TelaTeste.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: rgb(126, 72, 207);
     
   }
 
@@ -109,31 +109,45 @@ body {
     position: absolute;
   }
   
-  #sec1 {
-    background-color: rgb(156, 90, 255);
-    padding: 40px;
-    text-align: center;
-    color:rgb(255, 255, 255);
-  
-  }
-  #sec2 {
-    
-    background-color: white;
-    padding: 40px;
-    text-align: center;
-    color: rgb(156, 90, 255);
-  }
-
   .int{
     color: rgb(156, 90, 255);
   }
 
-  #sec3 {
+  .container {
+    display: flex;
+}
+
+  #sec1 {
+    background-color: rgb(126, 72, 207);
+    padding: 40px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    border: 0.5px solid rgb(126, 72, 207);
+}
+
+#sec2 {
+    background-color: white;
+    padding: 40px;
+    text-align: center;
+    color: rgb(156, 90, 255);
+    flex: 2; 
+    min-width: 200px;
+    border-radius: 4px; 
+    border: 0.8px solid rgb(126, 72, 207);
+}
+
+#sec3 {
     background-color: rgb(156, 90, 255);
     padding: 40px;
     text-align: center;
-    color:rgb(255, 255, 255);
-  }
+    color: rgb(255, 255, 255);
+    flex: 2; 
+    min-width: 200px;
+    border-radius: 4px; 
+    border: 0.8px solid rgb(126, 72, 207);
+   
+}
+
 
 
   #img {
@@ -389,7 +403,7 @@ body {
   /* ba e be dos p */
 #ba {
   font-size: 17.5px;
-  margin-right: 35%;
+  margin-right: 70%;
   color: rgb(131, 73, 219);
 }
 
@@ -401,19 +415,19 @@ body {
 
 #bi {
   font-size: 17.5px;
-  margin-right: 22%;
+  margin-right: 44%;
   color: rgb(131, 73, 219);
 }
 
 #bie {
   font-size: 16.5px;
   color: rgb(156, 90, 255);
-  margin-right: -2%;
+  margin-right: -6%;
 }
 
 #bo {
   font-size: 17.5px;
-  margin-right: 35%;
+  margin-right: 70%;
   color: rgb(131, 73, 219);
 }
 
@@ -424,7 +438,7 @@ body {
 }
 
 #bai {
-  margin-right: -5%;
+  margin-right: -3%;
   font-size: 17.5px;
   color: rgb(131, 73, 219);
 }
@@ -447,36 +461,36 @@ body {
 
 #ca{
   font-size: 17.5px;
-  margin-right: 33%;
+  margin-right: 55%;
   color: rgb(255, 236, 236);
 }
 
 #ce{
   font-size: 16.5px;
   color: rgb(255, 255, 255);
-  margin-right: -2%;
+  margin-right: 15%;
 }
 
 #ci{
   font-size: 17.5px;
-  margin-right: 25%;
+  margin-right: 39%;
   color: rgb(255, 236, 236);
 }
 
 #co{
   font-size: 16.5px;
   color: rgb(255, 255, 255);
-  margin-right: 1%;
+  margin-right: -14%;
 }
 
 #cu{
   font-size: 17.5px;
-  margin-right: 36%;
+  margin-right: 62%;
   color: rgb(255, 236, 236);
 }
 
 #cue{
   font-size: 16.5px;
   color: rgb(255, 255, 255);
-  margin-right: 5%;
+  margin-right: -4%;
 }
